# python-template

./: .editorconfig  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
