[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Nikolay Chechulin <nchechulin@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = {extras = ["jupyter"], version = "^23.1.0"}
bandit = "^1.7.4"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pre-commit = "^3.0.4"
pep8-naming = "^0.13.3"
flake8-absolute-import = "^1.0.0.1"
flake8-new-union-types = "^0.4.1"
flake8-annotations-complexity = "^0.0.7"
ruff = "^0.0.261"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
